--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,10 +8,10 @@ body {
 
 @layer base {
   body {
-    @apply bg-[#f6f9ff] text-gray-900 dark:bg-[#262837] dark:text-gray-100;
+    @apply bg-[#f6f9ff] text-gray-900 dark:bg-[#252837] dark:text-gray-100;
   }
   .listaActiva {
-    @apply bg-[#f6f9ff] dark:bg-[#262837] rounded-tl-xl rounded-bl-xl p-4;
+    @apply bg-[#f6f9ff] dark:bg-[#252837] rounded-tl-xl rounded-bl-xl p-4;
   }
   .listaActiva a,
   .navLink {
@@ -25,7 +25,7 @@ body {
   }
   .lista a,
   .navLink {
-    @apply bg-white dark:bg-[#262837] shadow-lg hover:shadow-blue-100 dark:shadow-gray-900 hover:dark:shadow-[#ec7b6a3a] p-3 flex rounded-lg;
+    @apply bg-white dark:bg-[#252837] shadow-lg hover:shadow-blue-100 dark:shadow-[#111827d3] hover:dark:shadow-[#ec7b6a3a] p-3 flex rounded-lg;
   }
   .lista .icon {
     @apply text-3xl mx-auto text-[#012970] dark:text-[#ec7c6a];
@@ -34,6 +34,9 @@ body {
     @apply text-[#012970] dark:text-[#ec7c6a];
   }
   /* #012970 */
+  .bg-card {
+    @apply bg-white dark:bg-[#1F1D2B];
+  }
 }
 
 /* Seccion de los navs */
