--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,17 +25,32 @@ body {
   }
   .lista a,
   .navLink {
-    @apply bg-white dark:bg-[#252837] shadow-lg hover:shadow-blue-100 dark:shadow-[#111827d3] hover:dark:shadow-[#ec7b6a3a] p-3 flex rounded-lg;
+    @apply bg-white dark:bg-[#252837] shadow-lg shadow-[#00000010] hover:shadow-blue-100 dark:shadow-[#191f2cd3] hover:dark:shadow-[#ec7b6a3a] p-3 flex rounded-lg;
   }
+  /* hover:dark:shadow-[#ec7b6a3a] */
   .lista .icon {
     @apply text-3xl mx-auto text-[#012970] dark:text-[#ec7c6a];
   }
-  .font-bold {
-    @apply text-[#012970] dark:text-[#ec7c6a];
+  .text-title {
+    @apply text-[#012970] dark:text-[#ec7c6a] font-bold;
   }
   /* #012970 */
   .bg-card {
+    transition: all 0.3s ease;
     @apply bg-white dark:bg-[#1F1D2B];
+  }
+  .bg-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0px 10px 13px -7px rgba(0, 0, 0, 0.1);
+  }
+  .bg-card2 {
+    @apply bg-white dark:bg-[#252837] shadow-lg hover:shadow-blue-100 dark:shadow-[#111827d3];
+  }
+  .button {
+    @apply bg-white dark:bg-[#252837] shadow-lg shadow-[#00000010] hover:shadow-blue-100 dark:shadow-[#191f2cd3] hover:dark:shadow-[#191f2ce1] p-3 flex rounded-lg;
+  }
+  .text-section {
+    @apply text-[#012970] dark:text-white font-bold;
   }
 }
 
